# voxeldust

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  SPECIFICATION.md  build_protocol.sh  dev-cluster.sh
client/: Cargo.toml
client/assets/shaders/: starfield.wgsl
client/src/: lighting.rs  main.rs
client/src/camera/: mod.rs  pose.rs
client/src/chunk/: cache.rs  material.rs  mod.rs  plugin.rs  stream.rs
client/src/config/: mod.rs
client/src/config_panel/: mod.rs
client/src/focus/: mod.rs
client/src/hud/: ar.rs  block_tile.rs  cockpit.rs  config.rs  focus.rs  font.rs  material.rs  mod.rs  panel_config.rs  publish.rs  signal_registry.rs  tablet.rs  tablet_ui.rs  texture.rs  tile.rs  widget.rs
client/src/hud/widgets/: button.rs  config_panel.rs  gauge.rs  mod.rs  numeric.rs  text.rs  toggle.rs
client/src/input/: mod.rs
client/src/interaction/: dispatch.rs  highlight.rs  mod.rs  raycast.rs
client/src/kernel/: cli.rs
client/src/net/: bridge.rs  mod.rs  network.rs
client/src/remote/: mod.rs
client/src/seat/: mod.rs
client/src/shard/: mod.rs  origin.rs  plugin.rs  registry.rs  runtime.rs  transition.rs  worldstate.rs
client/src/shard_types/: galaxy.rs  mod.rs  planet.rs  ship.rs  starfield.rs  system.rs
client/src/subgrid/: mod.rs
core/: Cargo.toml
core/src/: autopilot.rs  builder_pool.rs  camera_math.rs  client_message.rs  galaxy.rs  handoff.rs  lib.rs  protocol_generated.rs  seed.rs  shard_message.rs  shard_types.rs  system.rs  voxeldust_generated.rs  weather.rs  wire_codec.rs
core/src/block/: aggregation.rs  block_def.rs  block_grid.rs  block_id.rs  block_meta.rs  chunk_delta.rs  chunk_mesher.rs  chunk_storage.rs  client_chunks.rs  edit_pipeline.rs  interior_mask.rs  meshing_adapter.rs  mod.rs  palette.rs  raycast.rs  registry.rs  serialization.rs  ship_grid.rs  sub_block.rs  sub_block_mesher.rs
core/src/character/: components.rs  controller.rs  desired.rs  hooks.rs  kcc_sys.rs  locomotion.rs  mod.rs  stance.rs  stats.rs
core/src/ecs/: components.rs  events.rs  mod.rs  resources.rs
core/src/signal/: channel.rs  components.rs  config.rs  converter.rs  key_names.rs  mod.rs  seat_presets.rs  types.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: fake_client.rs  lib.rs  test_cluster.rs
e2e-tests/tests/: orchestrator_api.rs
galaxy-shard/: Cargo.toml
galaxy-shard/src/: main.rs
gateway/: Cargo.toml
gateway/src/: config.rs  main.rs  router.rs  session.rs
k8s/: gateway.yaml  namespace.yaml  orchestrator.yaml  rbac.yaml
orchestrator/: Cargo.toml
orchestrator/src/: config.rs  heartbeat.rs  http_api.rs  k8s_provisioner.rs  lib.rs  lifecycle.rs  main.rs  persistence.rs  provisioner.rs  registry.rs
orchestrator/tests/: http_api_test.rs
planet-shard/: Cargo.toml
planet-shard/src/: main.rs
protocol/: voxeldust.fbs
shard-common/: Cargo.toml
shard-common/src/: authorized_peers.rs  circuit_breaker.rs  client_listener.rs  handoff_pipeline.rs  harness.rs  healthz.rs  heartbeat_sender.rs  lib.rs  peer_registry.rs  quic_transport.rs  shutdown.rs  tick_loop.rs
shard-common/tests/: quic_integration.rs
ship-shard/: Cargo.toml
ship-shard/src/: main.rs
stub-shard/: Cargo.toml
stub-shard/src/: main.rs
system-shard/: Cargo.toml
system-shard/src/: main.rs
voxydust/: Cargo.toml
voxydust-next/: Cargo.toml
voxydust-next/src/: block_highlight.rs  block_interaction.rs  block_raycast.rs  camera_frame.rs  celestial.rs  chunk_stream.rs  chunks.rs  input_system.rs  main.rs  net_plugin.rs  player_sync.rs  remote_entities.rs  seat_bindings.rs  shard_origin.rs  shard_transition.rs  stars.rs  weather.rs
voxydust/src/: atmo_aerial.wgsl  atmo_common.wgsl  atmo_multiscatter.wgsl  atmo_skyview.wgsl  atmo_transmittance.wgsl  block.wgsl  block_render.rs  camera.rs  cloud_noise_gen.wgsl  cloud_system.rs  composite.wgsl  events.rs  gpu.rs  graphics_settings.rs  hud.rs  input.rs  light_propagate.wgsl  main.rs  mesh.rs  network.rs  render.rs  sphere.wgsl  stars.rs  stars.wgsl  voxel_volume.rs
