[package]
name = "voxeldust-core"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
flatbuffers = { workspace = true }
thiserror = { workspace = true }
brahe = { workspace = true }
nalgebra = { workspace = true }
lz4_flex = { workspace = true }
