[package]
name = "voxeldust-core"
version.workspace = true
edition.workspace = true

[features]
rapier = ["dep:rapier3d"]
bytemuck = ["dep:bytemuck"]

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
flatbuffers = { workspace = true }
thiserror = { workspace = true }
brahe = { workspace = true }
nalgebra = { workspace = true }
lz4_flex = { workspace = true }
gooding-lambert = { workspace = true }
bevy_ecs = { workspace = true }
rapier3d = { workspace = true, optional = true }
binary-greedy-meshing = { workspace = true }
bytemuck = { workspace = true, optional = true }
