[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
voxeldust-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
