[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
voxeldust-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redb = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
flatbuffers = { workspace = true }
