[package]
name = "planet-shard"
version.workspace = true
edition.workspace = true

[[bin]]
name = "planet-shard"
path = "src/main.rs"

[dependencies]
voxeldust-core = { workspace = true }
voxeldust-shard-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
glam = { workspace = true }
rapier3d = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
