[package]
name = "stub-shard"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stub-shard"
path = "src/main.rs"

[dependencies]
voxeldust-core = { workspace = true }
voxeldust-shard-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
